add:final-pass-generator

--- a/pass.html
+++ b/pass.html
@@ -551,7 +551,8 @@
             .es-text-8995 .es-text-mobile-size-11,
             .es-text-8995 .es-text-mobile-size-11 * {
                 font-size: 11px !important;
-                line-height: 150% !important
+                line-height: 150% !important;
+                color: #ffffff !important;
             }
             @media (prefers-color-scheme: dark) {
   .es-text-8995 {
@@ -749,7 +750,7 @@
                                                                 <td align="left" class="es-text-8852"
                                                                     style="padding:0;Margin:0;padding-top:5px;padding-bottom:15px">
                                                                     <p
-                                                                        style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:24px;letter-spacing:0;color:#ffffff;font-size:18px">
+                                                                        style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:24px;letter-spacing:0;color:#ffffff;font-size:20px">
                                                                         <strong>Entry Time</strong>
                                                                     </p>
                                                                     <p
@@ -757,18 +758,27 @@
                                                                         Day 1 : <strong>11:00 AM - 5:00 PM</strong></p>
                                                                     <p
                                                                         style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:24px;letter-spacing:0;color:#ffffff;font-size:16px">
-                                                                        Day 2 : <strong>2:00 PM - 3:30 PM</strong></p>
+                                                                        Day 2 : <strong>1:30 PM - 3:00 PM</strong></p>
                                                                 </td>
                                                             </tr>
                                                             <tr>
                                                                 <td align="left" class="es-text-8995"
                                                                     style="padding:0;Margin:0;padding-bottom:20px;padding-top:10px">
                                                                     <p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:36px !important;letter-spacing:0;color:#ffffff;font-size:18px"
-                                                                        class="es-text-mobile-size-18"><strong>VENUE
-                                                                            INFORMATION</strong></p>
-                                                                    <p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#ffffff;font-size:14px"
-                                                                        class="es-text-mobile-size-11">Please arrive at the venue in between the above mentioned time slots, No Entry will be allowed beyond 5pm . Everyone entering the arena will need to clear security and your bags will be searched. Only small bags and handbags are allowed in. No Coloured bottles will be allowed only transparent water bottles should be carried.
+                                                                        class="es-text-mobile-size-18"><strong>INSTRUCTIONS</strong></p>
+                                                                        <p style="margin:0;mso-line-height-rule:exactly;font-family:arial,'helvetica neue',helvetica,sans-serif;line-height:21px;letter-spacing:0;color:#ffffff;font-size:16px" class="es-text-mobile-size-11"></p>
+                                                                        <p style="margin:0;mso-line-height-rule:exactly;font-family:arial,'helvetica neue',helvetica,sans-serif;line-height:21px;letter-spacing:0;color:#ffffff;font-size:16px" class="es-text-mobile-size-11">
+                                                                            &bull; Please arrive at the venue in between the above mentioned time slots.<br>
+                                                                            &bull; No Entry will be allowed beyond that.<br>
+                                                                            &bull; Please be aware that an alcohol detector will be present at the entry check.<br>
+                                                                            &bull; Everyone entering the arena will need to clear security and your bags will be searched.<br>
+                                                                            &bull; Only small bags and handbags are allowed in.<br>
+                                                                            &bull; No food items will be allowed inside the hall.<br>
+                                                                            &bull; No Coloured bottles will be allowed only transparent water bottles should be carried.<br>
+                                                                            &bull; Must carry your college ID Cards/Library Cards else no entry.
+                                                                        </p>
                                                                     </p>
+                                                                            
                                                                 </td>
                                                             </tr>
                                                             <tr>
@@ -799,8 +809,11 @@
                                                                     <p style="Margin:0;margin-bottom:5px;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#ffffff;font-size:16px">
                                                                         For Tech related queries, please contact,
                                                                     </p>
-                                                                    <p style="Margin:0;margin-bottom:10px;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#ffffff;font-size:16px">
+                                                                    <p style="Margin:0;margin-bottom:5px;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#ffffff;font-size:16px">
                                                                         <strong>Alimpan De : <a style="mso-line-height-rule:exactly;text-decoration:none;color:#f1c232;font-size:16px" target="_blank" href="tel:+91 6289210018">&nbsp;+91 6289210018</a></strong>
+                                                                    </p>
+                                                                    <p style="Margin:0;margin-bottom:5px;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;letter-spacing:0;color:#ffffff;font-size:16px">
+                                                                        <strong>Atanu Biswas : <a style="mso-line-height-rule:exactly;text-decoration:none;color:#f1c232;font-size:16px" target="_blank" href="tel:+91 8116335804">&nbsp;+91 8116335804</a></strong>
                                                                     </p>
                                                                 </td>
                                                                 
